fix(page): set flex on portfolio section

--- a/Portpolio.html
+++ b/Portpolio.html
@@ -6,7 +6,7 @@
     <style>
         .image-row {
             display:flex;
-            justify-content: center;
+            justify-content: space-around;
         }
     </style>
 </head>
@@ -42,11 +42,11 @@
         <div id="portpolio">
             포트폴리오 섹션
             <div class="image-row">
-                <div>
+                <div class="image-section">
                     <img src="image/project-cles.png" / style="width:400px;height:350px;">
                     <h5>전북대학교 강의평가 CLeS</h5>
                 </div>
-                <div>
+                <div class=image-section>
                     <img src="image/dittofund.png" / style="width:400px;height:350px;">
                     <h5>헤지펀드 분석사이트 Dittofund</h5>
                 </div>
