fix(page): change image PNG name

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h5>전북대학교 강의평가 CLeS</h5>
                 </div>
                 <div class=image-section>
-                    <img src="image/dittofund.png" / style="width:400px;height:350px;">
+                    <img src="image/dittofund.PNG" / style="width:400px;height:350px;">
                     <h5>헤지펀드 분석사이트 Dittofund</h5>
                 </div>
             </div>
