--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <Title>김종백 포트폴리오</Title>
+    <link rel="stylesheet" type="text/css" href="portfolio.css">
     <style>
         .image-row {
             display: flex;
@@ -12,71 +13,77 @@
 </head>
 
 <body>
+    <navbar>
+        hi
+    </navbar>
     <div class="container">
         <div id="introduce">
-            자기소개 섹션
             <div class="image-row">
                 <div>
                     <p>과거에는 인문계열은 문과 일만, 이공계열은 이과 일만 한다고 생각했었습니다.</p>
                     <p>둘 사이를 뛰어넘는 건 무모해보이기도 했죠.</p>
-                    <p>그러나 문이과를 나누는 경계선을 극복할 수 있다면</p>
-                    <p>여태껏 누구도 보지 못했던 새로운 세계를 마주할 수 있습니다.</p>
+                    <p>그러나 문이과를 나누는
+                        <strong>경계선</strong>을 극복할 수 있다면</p>
+                    <p>여태껏 누구도 보지 못했던
+                        <b class="introduce-bold">새로운 세계</b>를 마주할 수 있습니다.</p>
                     <p>코딩도 요리처럼 누구나 쉽게 할 수 있습니다.</p>
                     <p>CodeEight과 함께 코딩의 기본부터 차근차근 알아가봅시다.</p>
                 </div>
                 <img src="image/profile.jpg" style="width:300px;height:300px;border-radius: 250px;">
             </div>
         </div>
-    </div>
-    <div id="career">
-        약력 섹션
-        <ul>
-            <h3>대학 생활</h3>
-            <li>2010 : 전북대학교 상과대학 경영학과 입학</li>
-            <li>2011 ~ 2012 : 군 복무</li>
-            <li>2014 : SCSC 과정을 통한 컴퓨터공학 부전공 시작</li>
-            <li>2016 : 전북대 강의평가 시스템 CLeS 개설</li>
-            <li>2017 : 헤지펀드 분석사이트 DittoFund 개설</li>
-            <li>2017 : 전북대학교 졸업</li>
-        </ul>
-        <ul>
-            <h3>서울 생활</h3>
-            <li>2017 : 서울 IT 스타트업 '빅러스터' 입사</li>
-            <li>2017 : 서울 IT 스타트업 '빅러스터 퇴사</li>
-        </ul>
-        <ul>
-            <h3>코드에잇</h3>
-            <li>2018 : 전주 IT 스타트업 '코드에잇' 결성</li>
-            <li>2018 : 전주 가맥축제 웹사이트 제작 및 운영</li>
-            <li>2019 : 전주 코딩 교육 시스템 개설</li>
-        </ul>
-    </div>
-    <div id="portpolio">
-        포트폴리오 섹션
-        <div class="image-row">
-            <div class="image-section">
-                <img src="image/project-cles.png" style="width:400px;height:350px;">
-                <h5>전북대학교 강의평가 CLeS</h5>
+        <div id="career">
+            <ul class="career-univ">
+                <h3>대학 생활</h3>
+                <li>2010 : 전북대학교 상과대학 경영학과 입학</li>
+                <li>2011 ~ 2012 : 군 복무</li>
+                <li>2014 : SCSC 과정을 통한 컴퓨터공학 부전공 시작</li>
+                <li>2016 : 전북대 강의평가 시스템 CLeS 개설</li>
+                <li>2017 : 헤지펀드 분석사이트 DittoFund 개설</li>
+                <li>2017 : 전북대학교 졸업</li>
+            </ul>
+            <ul class="career-seoul">
+                <h3>서울 생활</h3>
+                <li>2017 : 서울 IT 스타트업 '빅러스터' 입사</li>
+                <li>2017 : 서울 IT 스타트업 '빅러스터' 퇴사</li>
+            </ul>
+            <ul class="career-codeeight">
+                <h3>코드에잇</h3>
+                <li>2018 : 전주 IT 스타트업 '코드에잇' 결성</li>
+                <li>2018 : 전주 가맥축제 웹사이트 제작 및 운영</li>
+                <li>2019 : 전주 코딩 교육 시스템 개설</li>
+            </ul>
+        </div>
+        <div id="portpolio">
+            <div class="image-row">
+                <div class="image-section">
+                    <img src="image/project-cles.png" style="width:400px;height:350px;">
+                    <h5>전북대학교 강의평가 CLeS</h5>
+                </div>
+                <div class=image-section>
+                    <img src="image/dittofund.PNG" style="width:400px;height:350px;">
+                    <h5>헤지펀드 분석사이트 Dittofund</h5>
+                </div>
             </div>
-            <div class=image-section>
-                <img src="image/dittofund.PNG" style="width:400px;height:350px;">
-                <h5>헤지펀드 분석사이트 Dittofund</h5>
+            <div class="image-row">
+                <div class="image-section">
+                    <img src="image/gamaek.png" style="width:400px;height:350px;">
+                    <h5>전주가맥축제</h5>
+                </div>
+                <div class="image-section">
+                    <img src="image/vrone.png" style="width:400px;height:350px;">
+                    <h5>3DVrone</h5>
+                </div>
             </div>
         </div>
-        <div class="image-row">
-            <div class="image-section">
-                <img src="image/gamaek.png" style="width:400px;height:350px;">
-                <h5>전주가맥축제</h5>
+        <div id="contact">
+            <div>
+                tel: 010.4584.1497
             </div>
-            <div class="image-section">
-                <img src="image/vrone.png" style="width:400px;height:350px;">
-                <h5>3DVrone</h5>
+            <div>
+                email: good5229@naver.com
             </div>
         </div>
-    </div>
-    <div id="contact">
-        컨택트 섹션
-    </div>
     </div>
 </body>
 
