--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 </head>
 
 <body>
-    <navbar>
-        hi
-    </navbar>
+    <nav class="navbar">
+        <a href="#introduce">소개</a>
+        <a href="#career">커리어</a>
+        <a href="#portpolio">포트폴리오</a>
+        <a href="#contact">연락</a>
+    </nav>
     <div class="container">
         <div id="introduce">
             <div class="image-row">
