--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <Title>김종백 포트폴리오</Title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Nanum+Gothic" rel="stylesheet">
     <style>
         .image-row {
             display: flex;
@@ -24,15 +25,15 @@
             <div class="image-row">
                 <div>
                     <p>과거에는 인문계열은 문과 일만, 이공계열은 이과 일만 한다고 생각했었습니다.</p>
-                    <p>둘 사이를 뛰어넘는 건 무모해보이기도 했죠.</p>
+                    <p>둘 사이를 뛰어넘는 건 <b class="introduce-bold">무모</b>해보이기도 했죠.</p>
                     <p>그러나 문이과를 나누는
-                        <strong>경계선</strong>을 극복할 수 있다면</p>
+                        <b class="introduce-bold">경계선</b>을 극복할 수 있다면</p>
                     <p>여태껏 누구도 보지 못했던
                         <b class="introduce-bold">새로운 세계</b>를 마주할 수 있습니다.</p>
-                    <p>코딩도 요리처럼 누구나 쉽게 할 수 있습니다.</p>
+                    <p>코딩도 요리처럼 <b class="introduce-bold">누구나 쉽게</b> 할 수 있습니다.</p>
                     <p>CodeEight과 함께 코딩의 기본부터 차근차근 알아가봅시다.</p>
                 </div>
-                <img src="image/profile.jpg" style="width:300px;height:300px;border-radius: 250px;">
+                <img src="image/profile.jpg" style="margin-top:45px;width:300px;height:300px;border-radius: 250px;">
             </div>
         </div>
         <div id="career">
