fix(media): createe media query

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
     <div class="container">
         <div id="introduce">
             <div class="image-row">
-                <div>
-                    <p>과거에는 인문계열은 문과 일만, 이공계열은 이과 일만 한다고 생각했었습니다.</p>
+                <div class="text">
+                    <p>과거에는 인문계열은 문과 일만,</p> 
+                    <p>이공계열은 이과 일만 한다고 생각했었습니다.</p>
                     <p>둘 사이를 뛰어넘는 건 <b class="introduce-bold">무모</b>해보이기도 했죠.</p>
                     <p>그러나 문이과를 나누는
                         <b class="introduce-bold">경계선</b>을 극복할 수 있다면</p>
-                    <p>여태껏 누구도 보지 못했던
+                    <p>여태껏 겪지 못했던
                         <b class="introduce-bold">새로운 세계</b>를 마주할 수 있습니다.</p>
                     <p>코딩도 요리처럼 <b class="introduce-bold">누구나 쉽게</b> 할 수 있습니다.</p>
                     <p>CodeEight과 함께 코딩의 기본부터 차근차근 알아가봅시다.</p>
                 </div>
-                <img src="image/profile.jpg" style="margin-top:45px;width:300px;height:300px;border-radius: 250px;">
+                <img id="portrait" src="image/profile.jpg">
             </div>
         </div>
         <div id="career">
