fix(image): change image width

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <div class="image-row">
                 <div class="image-section">
                     <!-- <a href="http://www.cles.or.kr"> -->
-                    <img src="image/project-cles.png" style="width:400px;height:350px;">
+                    <img class="portfolio_image" src="image/project-cles.png">
                     <!-- </a> -->
                     <h5>전북대학교 강의평가 CLeS</h5>
                 </div>
                 <div class=image-section>
                     <a href="http://www.dittofund.com">
-                        <img src="image/dittofund.PNG" style="width:400px;height:350px;" href="www.dittofund.com">
+                        <img class="portfolio_image" src="image/dittofund.PNG">
                     </a>
                     <h5>헤지펀드 분석사이트 Dittofund</h5>
                 </div>
@@ -94,13 +94,13 @@
             <div class="image-row">
                 <div class="image-section">
                     <a href="http://gamaek.com">
-                        <img src="image/gamaek.png" style="width:400px;height:350px;" href="http://gamaek.com">
+                        <img class="portfolio_image" src="image/gamaek.png">
                     </a>
                     <h5>전주가맥축제</h5>
                 </div>
                 <div class="image-section">
                     <a href="https://vrone.codeeight.io">
-                        <img src="image/vrone.png" style="width:400px;height:350px;" href="https://vrone.codeeight.io">
+                        <img class="portfolio_image" src="image/vrone.png">
                     </a>
                     <h5>3DVrone</h5>
                 </div>
