fix(image): make image size more lighter

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="image-row">
                 <div class="image-section">
                     <!-- <a href="http://www.cles.or.kr"> -->
-                    <img class="portfolio_image" src="image/project-cles.png">
+                    <img class="portfolio_image" src="image/project-cles.jpg">
                     <!-- </a> -->
                     <h5>전북대학교 강의평가 CLeS</h5>
                 </div>
@@ -94,13 +94,13 @@
             <div class="image-row">
                 <div class="image-section">
                     <a href="http://gamaek.com">
-                        <img class="portfolio_image" src="image/gamaek.png">
+                        <img class="portfolio_image" src="image/gamaek.jpg">
                     </a>
                     <h5>전주가맥축제</h5>
                 </div>
                 <div class="image-section">
                     <a href="https://vrone.codeeight.io">
-                        <img class="portfolio_image" src="image/vrone.png">
+                        <img class="portfolio_image" src="image/vrone.jpg">
                     </a>
                     <h5>3DVrone</h5>
                 </div>
