fix(metatag): change image url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="HTML/CSS로 나만의 웹 포트폴리오를 만들어보자 시범자료입니다." />
     <meta property="article:author" content="CodeEight" />
     <meta property="og:url" content="https://good5229.github.io/my_portpolio/" />
-    <meta property="og:image" content="img/profile.jpg" />
+    <meta property="og:image" content="image/profile.jpg" />
 
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
     <link rel="icon" href="image/favicon.ico" type="image/x-icon">
