--- a/index.html
+++ b/index.html
@@ -37,25 +37,31 @@
         <a href="#portpolio">포트폴리오</a>
         <a href="#contact">연락</a>
     </nav>
+
     <div class="containers">
-        <div id="introduce">
-            <div class="image-row">
-                <div class="text">
-                    <p>과거에는 인문계열은 문과 일만,</p>
-                    <p>이공계열은 이과 일만 한다고 생각했었습니다.</p>
-                    <p>둘 사이를 뛰어넘는 건
-                        <b class="introduce-bold">무모</b>해보이기도 했죠.</p>
-                    <p>그러나 문이과를 나누는
-                        <b class="introduce-bold">경계선</b>을 극복할 수 있다면</p>
-                    <p>여태껏 겪지 못했던
-                        <b class="introduce-bold">새로운 세계</b>를 마주할 수 있습니다.</p>
-                    <p>코딩도 요리처럼
-                        <b class="introduce-bold">누구나 쉽게</b> 할 수 있습니다.</p>
-                    <p>
-                        <b class="introduce-bold">CodeEight</b>과 함께 코딩의 기본부터 알아갑시다.</p>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="image/carousel1.png" class="d-block w-100" alt="first-image">
                 </div>
-                <img id="portrait" src="image/profile.jpg">
+                <div class="carousel-item">
+                    <img src="image/carousel2.png" class="d-block w-100" alt="second-image">
+                </div>
+                <div class="carousel-item">
+                    <img src="image/carousel3.png" class="d-block w-100" alt="third-image">
+                </div>
+                <div class="carousel-item">
+                    <img src="image/carousel4.png" class="d-block w-100" alt="fourth-image">
+                </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
         <div id="career">
             <ul class="career-univ">
