fix(career): change career design

--- a/index.html
+++ b/index.html
@@ -63,27 +63,99 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div id="career">
-            <ul class="career-univ">
-                <h3>대학 생활</h3>
-                <li>2010 : 전북대학교 상과대학 경영학과 입학</li>
-                <li>2011 ~ 2012 : 군 복무</li>
-                <li>2014 : SCSC 과정을 통한 컴퓨터공학 부전공 시작</li>
-                <li>2016 : 전북대 강의평가 시스템 CLeS 개설</li>
-                <li>2017 : 헤지펀드 분석사이트 DittoFund 개설</li>
-                <li>2017 : 전북대학교 졸업</li>
-            </ul>
-            <ul class="career-seoul">
-                <h3>서울 생활</h3>
-                <li>2017 : 서울 IT 스타트업 '빅러스터' 입사</li>
-                <li>2017 : 서울 IT 스타트업 '빅러스터' 퇴사</li>
-            </ul>
-            <ul class="career-codeeight">
-                <h3>코드에잇</h3>
-                <li>2018 : 전주 IT 스타트업 '코드에잇' 결성</li>
-                <li>2018 : 전주 가맥축제 웹사이트 제작 및 운영</li>
-                <li>2019 : 전주 코딩 교육 시스템 개설</li>
-            </ul>
+        <div id="career" style="background-color:rgb(243, 239, 239);">
+            <div style="padding-top:35px;padding-bottom:35px;text-align:center;font-size:32px;font-weight:800;">
+                History
+            </div>
+            <div style="text-align:center;font-size:16px;">
+                간략한 과거사
+            </div>
+            <div style="padding-bottom:35px;text-align:center;font-size:16px;color:gray;">
+                이 자리에 서기까지 항상 순탄했던 것은 아닙니다만,
+                <br> 결국 이 자리에 서게 되었습니다.
+                <br> 간략한 이야기를 통해
+                <br> 어떻게 제가 발전해왔는지 알려드리고자 합니다.
+            </div>
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#30e3ca;color:#FFFFFF;width:100%;">
+                <div style="text-align:center;font-size:16px;">대학 생활</div>
+                <div style="text-align: center;font-size:32px;">2010-2017</div>
+                <div class="career-contents" style="display:flex;justify-content:space-around;">
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-school"></i>
+                        </div>
+                        경영학과에 입학했으나,
+                        <br> 경영학에 대한 적성도 그리 높지 않았고
+                        <br> 전문직에 대한 꿈 역시 그리 크지 않았습니다.
+                        <br>
+                        <br> 그러던 와중 컴퓨터공학 부전공에 대한 이야기를 듣게 되었습니다.
+                        <br>컴퓨터공학 부전공은 경영학적 지식을 보다 실생활에
+                        <br>적용하기 좋게 도와 줄 것이라는 생각이 들었습니다.
+                    </div>
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-desktop"></i>
+                        </div>
+                        컴퓨터공학을 부전공하면서,
+                        <br>전북대학교 강의평가 사이트를 만들어 보고 싶다는
+                        <br>생각이 들었습니다.
+                        <br>2016년에 CLeS를 런칭하여 그 꿈을 이루었고,
+                        <br>2017년에는 졸업과 동시에
+                        <br>헤지펀드 분석 사이트 DittoFund를
+                        <br>만들었습니다.
+                    </div>
+                </div>
+            </div>
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#2f89fc;color:#FFFFFF;width:100%;">
+                <div style="text-align:center;font-size:16px;">서울 생활</div>
+                <div style="text-align: center;font-size:32px;">2017</div>
+                <div class="career-contents" style="display:flex;justify-content:space-around;">
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-building"></i>
+                        </div>
+                        대학 졸업 후 우연한 기회에
+                        <br> 영등포에 있는 IT 스타트업에 취직할 수 있었습니다.
+                        <br> 높은 기술 이해도가 없던 제게는
+                        <br> 수준높은 기술을 배울 수 있는 좋은 기회라 여겨졌습니다.
+                    </div>
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-sad-tear"></i>
+                        </div>
+                        그러나 현실은 그리 녹록치 않았습니다.
+                        <br> 향수병과 회사 부적응 등이 연이어 닥쳐오면서
+                        <br> 제게 큰 스트레스가 되었습니다.
+                        <br> 끝내는 왼팔에 마비 증세가 왔었고,
+                        <br> 결국 건강상의 이유로 퇴사 후 전주로 돌아오게 되었습니다.
+                    </div>
+                </div>
+            </div>
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#40514e;color:#FFFFFF;width:100%;">
+                <div style="text-align:center;font-size:16px;">CodeEight 생활</div>
+                <div style="text-align: center;font-size:32px;">2018~현재</div>
+                <div class="career-contents" style="display:flex;justify-content:space-around;">
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fab fa-dev"></i>
+                        </div>
+                        퇴사 후 전주의 CodeEight이라는
+                        <br> 개발팀에 합류하게 되었습니다.
+                        <br> 합류 후 Django, React 등을 배우며
+                        <br> 전주 가맥축제 웹페이지를 포함한
+                        <br> 다수의 웹 서비스를 만들 수 있게 되었습니다.
+                    </div>
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-chalkboard-teacher"></i>
+                        </div>
+                        각종 외주 사업을 수행하는 것 이외에도,
+                        <br> 교육 사업을 진행하여
+                        <br> 전주의 IT 인적 인프라를
+                        <br> 확장시키는 작업을 진행하고 있습니다.
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="interview">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Qs9MuQOdnYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
