--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <br> 경영학에 대한 적성도 그리 높지 않았고
                         <br> 전문직에 대한 꿈 역시 그리 크지 않았습니다.
                         <br>
-                        <br> 그러던 와중 컴퓨터공학 부전공에 대한 이야기를 듣게 되었습니다.
+                        <br> 그러던 와중 컴퓨터공학 부전공에 대해 알게 되었습니다.
                         <br>컴퓨터공학 부전공은 경영학적 지식을 보다 실생활에
                         <br>적용하기 좋게 도와 줄 것이라는 생각이 들었습니다.
                     </div>
@@ -97,8 +97,9 @@
                             <i class="fas fa-desktop"></i>
                         </div>
                         컴퓨터공학을 부전공하면서,
-                        <br>전북대학교 강의평가 사이트를 만들어 보고 싶다는
+                        <br>배운 것을 활용하고 싶다는
                         <br>생각이 들었습니다.
+                        <br>
                         <br>2016년에 CLeS를 런칭하여 그 꿈을 이루었고,
                         <br>2017년에는 졸업과 동시에
                         <br>헤지펀드 분석 사이트 DittoFund를
@@ -116,6 +117,7 @@
                         </div>
                         대학 졸업 후 우연한 기회에
                         <br> 영등포에 있는 IT 스타트업에 취직할 수 있었습니다.
+                        <br>
                         <br> 높은 기술 이해도가 없던 제게는
                         <br> 수준높은 기술을 배울 수 있는 좋은 기회라 여겨졌습니다.
                     </div>
@@ -126,6 +128,7 @@
                         그러나 현실은 그리 녹록치 않았습니다.
                         <br> 향수병과 회사 부적응 등이 연이어 닥쳐오면서
                         <br> 제게 큰 스트레스가 되었습니다.
+                        <br>
                         <br> 끝내는 왼팔에 마비 증세가 왔었고,
                         <br> 결국 건강상의 이유로 퇴사 후 전주로 돌아오게 되었습니다.
                     </div>
@@ -141,6 +144,7 @@
                         </div>
                         퇴사 후 전주의 CodeEight이라는
                         <br> 개발팀에 합류하게 되었습니다.
+                        <br>
                         <br> 합류 후 Django, React 등을 배우며
                         <br> 전주 가맥축제 웹페이지를 포함한
                         <br> 다수의 웹 서비스를 만들 수 있게 되었습니다.
@@ -162,32 +166,70 @@
                 allowfullscreen></iframe>
         </div>
         <div id="portpolio">
-            <div class="image-row">
-                <div class="image-section">
-                    <!-- <a href="http://www.cles.or.kr"> -->
-                    <img class="portfolio_image" src="image/project-cles.jpg">
-                    <!-- </a> -->
-                    <h5>전북대학교 강의평가 CLeS</h5>
+            <div class="image-row row">
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/project-cles.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">전북대학교 강의평가 사이트 CLeS</h5>
+                        <p class="card-text">전북대학교 학생들이 이용할 수 있는 익명 기반 강의 평가 시스템입니다.</p>
+                        <p class="card-text">
+                            <small class="text-muted">운영하지 않음</small>
+                        </p>
+                    </div>
                 </div>
-                <div class=image-section>
-                    <a href="http://www.dittofund.com">
-                        <img class="portfolio_image" src="image/dittofund.PNG">
-                    </a>
-                    <h5>헤지펀드 분석사이트 Dittofund</h5>
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/dittofund.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">DittoFund</h5>
+                        <p class="card-text">미국 SEC에서 제공하는 헤지펀드 분기별 포트폴리오를 비교해서, 이전 분기 대비 증감 여부를 계산하여 표시해 주는 웹 서비스입니다.</p>
+                        <p class="card-text">
+                            <a href="www.dittofund.com" class="btn btn-primary">방문하기</a>
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="image-row">
-                <div class="image-section">
-                    <a href="http://gamaek.com">
-                        <img class="portfolio_image" src="image/gamaek.jpg">
-                    </a>
-                    <h5>전주가맥축제</h5>
+            <div class="image-row row">
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/gamaek.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">전주가맥축제</h5>
+                        <p class="card-text">'오늘 만든 맥주를 오늘 마시자'는 컨셉으로 진행되는 전주 가맥축제의 소개 웹 페이지입니다.</p>
+                        <p class="card-text">
+                            <a href="http://gamaek.com" class="btn btn-primary">방문하기</a>
+                        </p>
+                    </div>
                 </div>
-                <div class="image-section">
-                    <a href="https://vrone.codeeight.io">
-                        <img class="portfolio_image" src="image/vrone.jpg">
-                    </a>
-                    <h5>3DVrone</h5>
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/vrone.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">3DVrone</h5>
+                        <p class="card-text">지질 구조를 드론으로 촬영한 뒤 이를 3D 모델로 만들어 교육자료로 사용할 수 있는 서비스를 소개해주는 웹 사이트입니다.</p>
+                        <p class="card-text">
+                            <a href="https://vrone.codeeight.io/" class="btn btn-primary">방문하기</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="image-row row">
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/salesmaster.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">SalesMaster</h5>
+                        <p class="card-text">현대자동차 영업 및 고객관리에 사용되는 웹 서비스입니다.</p>
+                        <p class="card-text">
+                            <a href="https://salesmaster.codeeight.io/" class="btn btn-primary">방문하기</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/whoami.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">WhoAmI</h5>
+                        <p class="card-text">개인의 사주에 관한 기본적인 항목들을 보여주는 웹 서비스입니다.</p>
+                        <p class="card-text">
+                            <a href="https://foresthog.cc/" class="btn btn-primary">방문하기</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
