--- a/index.html
+++ b/index.html
@@ -234,10 +234,17 @@
             </div>
         </div>
         <div id="contact">
-            <div>
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#005792;color:#FFFFFF;width:100%;">
+                <div style="padding-left:15%;">주요 기술 스택</div>
+                <div style="padding-left:15%;">Web : HTML, CSS, JS, Bootstrap</div>
+                <div style="padding-left:15%;">Front-end: React</div>
+                <div style="padding-left:15%;">Back-end: Django</div>
+                <div style="padding-left:15%;">Programming Language: Python</div>
+            </div>
+            <div style="padding-left:15%;">
                 &#x260E: 010.4584.1497
             </div>
-            <div>
+            <div style="padding-left:15%;">
                 <i class="far fa-envelope"></i>: good5229@naver.com
             </div>
         </div>
