feat(contact): create padding

--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@
                 <div style="padding-left:15%;">Back-end: Django</div>
                 <div style="padding-left:15%;">Programming Language: Python</div>
             </div>
-            <div style="padding-left:15%;">
-                &#x260E: 010.4584.1497
-            </div>
-            <div style="padding-left:15%;">
-                <i class="far fa-envelope"></i>: good5229@naver.com
+            <div style="padding-top:25px;padding-bottom:25px;">
+                <div style="padding-left:15%;">
+                    &#x260E: 010.4584.1497
+                </div>
+                <div style="padding-left:15%;">
+                    <i class="far fa-envelope"></i>: good5229@naver.com
+                </div>
             </div>
         </div>
     </div>
