--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <Title>김종백 포트폴리오</Title>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="CQJaStyr6RiOwB-mdVhcMU64vTfaM0VCfmeKYhaKFZg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="CodeEight Portfolio Example" />
     <meta property="og:type" content="website" />
