fix(portpolio)-add 2019~2020 plan

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <br> 간략한 이야기를 통해
                 <br> 어떻게 제가 발전해왔는지 알려드리고자 합니다.
             </div>
-            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#30e3ca;color:#FFFFFF;width:100%;">
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#120136;color:#FFFFFF;width:100%;">
                 <div style="text-align:center;font-size:16px;">대학 생활</div>
                 <div style="text-align: center;font-size:32px;">2010-2017</div>
                 <div class="career-contents" style="display:flex;justify-content:space-around;">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#2f89fc;color:#FFFFFF;width:100%;">
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#035aa6;color:#FFFFFF;width:100%;">
                 <div style="text-align:center;font-size:16px;">서울 생활</div>
                 <div style="text-align: center;font-size:32px;">2017</div>
                 <div class="career-contents" style="display:flex;justify-content:space-around;">
@@ -135,9 +135,9 @@
                     </div>
                 </div>
             </div>
-            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#40514e;color:#FFFFFF;width:100%;">
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#40bad5;color:#FFFFFF;width:100%;">
                 <div style="text-align:center;font-size:16px;">CodeEight 생활</div>
-                <div style="text-align: center;font-size:32px;">2018~현재</div>
+                <div style="text-align: center;font-size:32px;">2018~2020</div>
                 <div class="career-contents" style="display:flex;justify-content:space-around;">
                     <div class="career-content" style="margin:5%;">
                         <div class="text-center" style="font-size:64px;">
@@ -149,6 +149,8 @@
                         <br> 합류 후 Django, React 등을 배우며
                         <br> 전주 가맥축제 웹페이지를 포함한
                         <br> 다수의 웹 서비스를 만들 수 있게 되었습니다.
+                        <br> 또한 Python을 활용하여
+                        <br> 각종 자동화 프로그램을 제작했습니다.
                     </div>
                     <div class="career-content" style="margin:5%;">
                         <div class="text-center" style="font-size:64px;">
@@ -157,7 +159,35 @@
                         각종 외주 사업을 수행하는 것 이외에도,
                         <br> 교육 사업을 진행하여
                         <br> 전주의 IT 인적 인프라를
-                        <br> 확장시키는 작업을 진행하고 있습니다.
+                        <br> 확장시키는 작업을 진행했습니다.
+                    </div>
+                </div>
+            </div>
+            <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#fcbf1e;color:#FFFFFF;width:100%;">
+                <div style="text-align:center;font-size:16px;">데이터분석가를 지망</div>
+                <div style="text-align: center;font-size:32px;">2019~현재</div>
+                <div class="career-contents" style="display:flex;justify-content:space-around;">
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-digital-tachograph"></i>
+                        </div>
+                        세상에는 사용할 수 있는 많은 데이터가 있는데
+                        <br> 그것들을 제대로 사용하지 못해서 안타까웠습니다.
+                        <br>
+                        <br> 데이터분석, 머신러닝 등의 개념들을 접하고
+                        <br> 한국데이터산업진흥원에서 진행한 
+                        <br> 빅데이터 청년인재 과정을 수료하면서
+                        <br> 데이터분석과 머신러닝이 무엇인지에 대해 이해하게 되었습니다.
+                    </div>
+                    <div class="career-content" style="margin:5%;">
+                        <div class="text-center" style="font-size:64px;">
+                            <i class="fas fa-search"></i>
+                        </div>
+                        해당 분야에 대해 더욱 깊은 관심이 생겨
+                        <br> 공학수학과 머신 러닝, 통계와 데이터 분석을 공부합니다.
+                        <br>
+                        <br> 또한 더욱 깊은 공부를 위해
+                        <br> 관련 대학원에 진학하려는 계획이 있습니다.
                     </div>
                 </div>
             </div>
@@ -184,7 +214,7 @@
                         <h5 class="card-title">DittoFund</h5>
                         <p class="card-text">미국 SEC에서 제공하는 헤지펀드 분기별 포트폴리오를 비교해서, 이전 분기 대비 증감 여부를 계산하여 표시해 주는 웹 서비스입니다.</p>
                         <p class="card-text">
-                            <a href="www.dittofund.com" class="btn btn-primary">방문하기</a>
+                            <small class="text-muted">운영하지 않음</small>
                         </p>
                     </div>
                 </div>
@@ -196,7 +226,7 @@
                         <h5 class="card-title">전주가맥축제</h5>
                         <p class="card-text">'오늘 만든 맥주를 오늘 마시자'는 컨셉으로 진행되는 전주 가맥축제의 소개 웹 페이지입니다.</p>
                         <p class="card-text">
-                            <a href="http://gamaek.com" class="btn btn-primary">방문하기</a>
+                            <small class="text-muted">운영하지 않음</small>
                         </p>
                     </div>
                 </div>
@@ -206,7 +236,7 @@
                         <h5 class="card-title">3DVrone</h5>
                         <p class="card-text">지질 구조를 드론으로 촬영한 뒤 이를 3D 모델로 만들어 교육자료로 사용할 수 있는 서비스를 소개해주는 웹 사이트입니다.</p>
                         <p class="card-text">
-                            <a href="https://vrone.codeeight.io/" class="btn btn-primary">방문하기</a>
+                            <small class="text-muted">운영하지 않음</small>
                         </p>
                     </div>
                 </div>
@@ -218,7 +248,7 @@
                         <h5 class="card-title">SalesMaster</h5>
                         <p class="card-text">현대자동차 영업 및 고객관리에 사용되는 웹 서비스입니다.</p>
                         <p class="card-text">
-                            <a href="https://salesmaster.codeeight.io/" class="btn btn-primary">방문하기</a>
+                            <small class="text-muted">운영하지 않음</small>
                         </p>
                     </div>
                 </div>
@@ -228,7 +258,29 @@
                         <h5 class="card-title">WhoAmI</h5>
                         <p class="card-text">개인의 사주에 관한 기본적인 항목들을 보여주는 웹 서비스입니다.</p>
                         <p class="card-text">
-                            <a href="https://foresthog.cc/" class="btn btn-primary">방문하기</a>
+                            <small class="text-muted">운영하지 않음</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="image-row row">
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/happyride.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Happyride</h5>
+                        <p class="card-text">머신 러닝 기반으로 행복택시 정책을 진행하려 할 때 비용적인 부분에서의 적합도를 진단해주는 서비스입니다.</p>
+                        <p class="card-text">
+                            <small class="text-muted">운영하지 않음</small>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 card mb-3">
+                    <img class="card-img-top" src="image/python_auto.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">송장번호 자동배정 프로그램</h5>
+                        <p class="card-text">Python을 활용하여, 다양한 쇼핑몰의 주문들에 해당하는 송장번호를 CJ대한통운의 송장번호와 매치시켜주는 프로그램입니다.</p>
+                        <p class="card-text">
+                            <small class="text-muted">운영하지 않음</small>
                         </p>
                     </div>
                 </div>
@@ -237,10 +289,13 @@
         <div id="contact">
             <div style="font-weight:600;padding:35px 0px 35px 0px;background-color:#005792;color:#FFFFFF;width:100%;">
                 <div style="padding-left:15%;">주요 기술 스택</div>
-                <div style="padding-left:15%;">Web : HTML, CSS, JS, Bootstrap</div>
+                <div style="padding-left:15%;">Web : HTML, CSS, JS</div>
                 <div style="padding-left:15%;">Front-end: React</div>
                 <div style="padding-left:15%;">Back-end: Django</div>
-                <div style="padding-left:15%;">Programming Language: Python</div>
+                <div style="padding-left:15%;">Programming Language: Python, Dart</div>
+                <div style="padding-left:15%;">Data Anlaysis: Pandas, Matplotlib, Seaborn</div>
+                <div style="padding-left:15%;">Machine Learning: Pytorch, Tensorflow</div>
+                <div style="padding-left:15%;">App: Flutter</div>
             </div>
             <div style="padding-top:25px;padding-bottom:25px;">
                 <div style="padding-left:15%;">
@@ -248,6 +303,9 @@
                 </div>
                 <div style="padding-left:15%;">
                     <i class="far fa-envelope"></i>: good5229@naver.com
+                </div>
+                <div style="padding-left:15%;">
+                    <i class="fas fa-rss-square"></i>: <a href="https://blog.naver.com/good5229">Here</a>
                 </div>
             </div>
         </div>
