--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="CQJaStyr6RiOwB-mdVhcMU64vTfaM0VCfmeKYhaKFZg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name" content="CodeEight Portfolio Example" />
+    <meta property="og:site_name" content="JB Kim's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CodeEight Portfolio Example" />
-    <meta property="og:description" content="HTML/CSS로 나만의 웹 포트폴리오를 만들어보자 시범자료입니다." />
+    <meta property="og:title" content="JB Kim's Portfolio" />
+    <meta property="og:description" content="데이터 전문가를 지향하는 김종백 포트폴리오입니다." />
     <meta property="article:author" content="CodeEight" />
     <meta property="og:url" content="https://good5229.github.io/my_portpolio/" />
     <meta property="og:image" content="image/profile.jpg" />
